<resources>
    <string name="app_name">Kta Tract</string>
    <string name="app_fileprovider_authority">com.unicorpdev.ktatract.fileprovider</string>

    <!--  Home  -->
    <string name="tracts_tab">All Tracts</string>
    <string name="collections_tab">Collections</string>

    <!--  Tract  -->
    <string name="tract_author_title">Author</string>
    <string name="tract_discovery_date_title">Discovery Date</string>
    <string name="tract_dating_title">Dating of the tract</string>
    <string name="tract_comments_title">Comments</string>

    <!--  Tract List  -->
    <string name="no_tract_list">No tract yet…</string>
    <string name="no_tract_result">No tract found…</string>
    <string name="tract_dating_from">Dating from %1$s</string>
    <string name="tract_found_on">Found on %1$s</string>
    <string name="tract_count">Tract(s)</string>

    <!--  Collection List  -->
    <string name="collection_count">Collection(s)</string>
    <string name="add_collection_button">Create a collection</string>

    <!--  Collection  -->
    <string name="my_collection_title">My collection</string>
    <string name="my_collection_description">Tracts from my personal collection</string>
    <string name="collection_unnamed">Unnamed collection</string>
    <string name="collection_title">Collection title</string>
    <string name="collection_description">Collection description</string>
    <string name="collection_image">Image representing collection</string>

    <!-- List Header -->
    <string name="list_format">%1$d %2$s</string>
    <string name="list_default_count">Item(s)</string>

    <!--  Menus  -->
    <string name="new_tract">New tract</string>
    <string name="sort_tract_list">Sort list</string>
    <string name="save_tract">Save tract</string>
    <string name="like_tract">Like</string>
    <string name="search_tract">Search tract</string>
    <string name="unlike_tract">Unlike</string>
    <string name="show_as_list">Show as list</string>
    <string name="show_as_grid">Show as grid</string>
    <string name="export_collection">Export your collection</string>
    <string name="import_collection">Import a collection</string>
    <string name="about">About</string>
    <string name="more_actions">Show more actions</string>

    <!--  AlertDialog  -->
    <string name="tract_dialog_title">Tract actions</string>

    <string name="delete_tract">Delete the tract</string>
    <string name="modify_tract">Modify the tract</string>
    <string name="delete_tract_success">Your tract has been successfully deleted</string>
    <string name="add_tracts_success">%1$d tract(s) created</string>

    <string name="tract_sort_by">Sort By…</string>
    <string name="tract_sort_other_options">Other options…</string>
    <string name="tract_sort_dialog_title">Sort tract list</string>
    <string name="tract_sort_button">Sort</string>
    <string name="tract_sort_default">Default (most recently added first)</string>
    <string name="tract_sort_author">Author</string>
    <string name="tract_sort_discovery_date">Discovery date</string>
    <string name="tract_sort_dating">Date</string>
    <string name="sort_order_ascending">Ascending</string>
    <string name="sort_order_descending">Descending</string>
    <string name="sort_order_is_descending">Is Descending ?</string>
    <string name="sort_favorite">Show only favorites</string>

    <string name="delete_collection">Delete the collection</string>
    <string name="modify_collection">Modify the collection</string>
    <string name="delete_collection_success">Your collection has been successfully deleted</string>
    <string name="no_collection_selection">My collection</string>

    <string name="import_choose_conflict_strategy_title">What do you want to do on conflicts?</string>
    <string name="import_ignore_conflicts">Keep the current version</string>
    <string name="import_replace_conflicts">Replace with the new one</string>
    <string name="loading_in_progress">Loading in progress</string>
    <string name="import_failed">Import failed</string>
    <string name="import_missing_files">Some of these files seems to be missing in the zip: %1$s.</string>

    <string name="take_picture">Take a picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>

    <!--  Permissions  -->
    <string name="camera_permission_description">Camera permission is required to take a picture of a tract.</string>
    <string name="no_camera_error">No camera available</string>

    <!-- Fab -->
    <string name="fab_btn_multiple_import">Add multiple tracts from gallery</string>
    <string name="fab_btn_import_tract_from_gallery">Add one tract from gallery</string>
    <string name="fab_btn_import_tract_take_picture">Add one tract with picture</string>
    <string name="fab_btn_import_image_from_gallery">Add image from gallery</string>
    <string name="fab_btn_import_image_take_picture">Add image with picture</string>

    <!--  About Page -->
    <string name="about_title">Thanks you for using KtaTract !</string>
    <string name="about_description">My name is Mathilde and I\'ve done this app on my free-time to improve myself as an Android Developer and as a noob UX/UI designer. Please be kind with me !</string>
    <string name="about_suggestion_description">If you have any problem or suggestion,\nclick here to send me a mail.</string>
    <string name="contact_email">mathilderessier@hotmail.fr</string>
    <string name="about_app_title">What is KtaTract ?</string>
    <string name="about_app_description">KtaTract is a storage for all your tracts so you\'ll never loose one again.\nEasy to save, easy to find. Keep a track of all your discovery.\nAdd personal comments, date indications, save favorites. Export and import collections so you can easily share your tracts with friends or save it on your computer.\n</string>
    <string name="about_app_description2">There is no internet usage (except for reporting crash) so you can be sure that no one is accessing your data, and you can safely use it without any connection.</string>

    <!--  Basics  -->
    <string name="i_understand">I understand</string>
    <string name="ok">OK</string>
    <string name="no_thanks">No thanks</string>
    <string name="delete">Delete</string>
    <string name="validate">Validate</string>
    <string name="settings">Settings</string>
    <string name="unknown">Unknown</string>

    <!--  Accessibility  -->
    <string name="btn_desc_delete_tract_image">Delete tract picture</string>
    <string name="btn_desc_date_not_set">Unknown date</string>

    <string name="btn_desc_like">You like this tract.</string>
    <string name="btn_desc_like_action">Like this tract</string>
    <string name="btn_desc_do_not_like_action">Do not like this tract anymore</string>

    <string name="image_desc_no_tract_in_list">Tract list is empty.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>