<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sortByTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/tract_sort_by"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="@string/tract_sort_by" />

            <RadioGroup
                android:id="@+id/sortByRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <TextView
                android:id="@+id/otherTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/tract_sort_other_options"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="@string/tract_sort_other_options" />

            <CheckBox
                android:id="@+id/descendingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_order_is_descending" />

            <CheckBox
                android:id="@+id/favoriteCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_favorite" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>